style.css
/* ... */
.hero-section .hero-details .description {
	max-width: 70%;
	margin: 24px 0 40px;
	font-size: var(--font-size-m);
}

.hero-section .hero-details .buttons {
	display: flex;
	gap: 23px;

}

.hero-section .hero-details .button {
	padding: 10px 26px;
	border: 2px solid transparent;
	color: var(--primary-color);
	border-radius: var(--border-radius-m);
	background: var(--secondary-color);
	font-weight: var(--font-weight-medium);
	transition: 0.3s ease;
}

.hero-section .hero-details .button:hover,
.hero-section .hero-details .contact-us {
	color: var(--white-color);
	border-color: var(--white-color);
	background: transparent;
}

.hero-section .hero-details .contact-us:hover {
	color: var(--primary-color);
	border-color: var(--secondary-color);
	background: var(--secondary-color);
}

.hero-section .hero-graphics-wrapper {
	max-width: 500px;
	margin-right: 2.3%;
}

.hero-section .hero-graphics-wrapper .hero-image {
	display: block;
}

.hero-section .hero-graphics-wrapper .hero-canvas {
	display: none;
	border-width: 1px;
	width: 100%;
	height: auto;
}

/* About section styling */
.about-section {
	padding: 120px 0;
	background: var(--light-pink-color);
}

.about-section .section-content {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.about-section .about-image-wrapper .about-image {
	width: 400px;
	height: 400px;
	object-fit: cover;
	border-radius: var(--border-radius-circle);
}

.about-section .about-details .section-title {
	padding: 0;

}

.about-section .about-details {
	max-width: 50%;
}

.about-section .about-details .text {
	line-height: 30px;
	margin: 50px 0 30px;
	text-align: center;
	font-size: var(--font-size-m);
}

.about-section .social-link-list {
	display: flex;
	gap: 25px;
	justify-content: center;
}

.about-section .social-link-list .social-link {
	color: var(--primary-color);
	font-size: var(--font-size-l);
	transition: 0.2s ease;
}

.about-section .social-link-list .social-link:hover {
	color: var(--secondary-color);
}

/* Products section styling */
.products-section {
	color: var(--white-color);
	background: var(--dark-color);
	padding: 50px 0 100px;
}

.products-section .products-list {
	display: flex;
	flex-wrap: wrap;
	gap: 110px;
	align-items: center;
	justify-content: space-between;
}

.products-section .products-list .product-item {
	display: flex;
	align-items: center;
	text-align: center;
	flex-direction: column;
	width: calc(100% / 3 - 110px);
}

.products-section .products-list .product-item .product-image {
	max-width: 83%;
	aspect-ratio: 1;
	margin-bottom: 15px;
	object-fit: contain;
}

.products-section .products-list .product-item .name {
	margin: 12px 0;
	font-size: var(--font-size-l);
	font-weight: var(--font-weight-semibold);
}

.products-section .products-list .product-item .text {
	font-size: var(--font-size-m);
}

/* Testimonials section styling */
.testimonials-section {
	padding: 50px 0 100px;
	background: var(--light-pink-color);
}

.testimonials-section .slider-wrapper {
	overflow: hidden;
	margin: 0 60px 50px;
}

.testimonials-section .testimonial {
	user-select: none;
	display: flex;
	padding: 35px;
	text-align: center;
	flex-direction: column;
	align-items: center;
}

.testimonials-section .testimonial .user-image {
	width: 180px;
	height: 180px;
	object-fit: cover;
	margin-bottom: 50px;
	border-radius: var(--border-radius-circle);
}

.testimonials-section .testimonial .name {
	margin-bottom: 16px;
	font-size: var(--font-size-m);
}

.testimonials-section .testimonial .feedback {
	line-height: 25px;
}

.testimonials-section .swiper-pagination-bullet {
	width: 15px;
	height: 15px;
	opacity: 1;
	background: var(--secondary-color);
}

.testimonials-section .swiper-slide-button {
	margin-top: -50px;
	color: var(--secondary-color);
	transition: 0.3s ease;
}

.testimonials-section .swiper-slide-button:hover {
	color: var(--primary-color);
}

/* Gallery section styling */
.gallery-section {
	padding: 50px 0 100px;
}

.gallery-section .gallery-list {
	display: flex;
	flex-wrap: wrap;
	gap: 32px;
}

.gallery-section .gallery-list .gallery-item {
	overflow: hidden;
	border-radius: var(--border-radius-s);
	width: calc(100% / 3 - 32px);
}

.gallery-section .gallery-item .gallery-image {
	width: 100%;
	height: 100%;
	cursor: zoom-in;
	transition: 0.3s ease;
}

.gallery-section .gallery-item:hover .gallery-image {
	transform: scale(1.3);
}

/* Contact us section styling */
.contact-section {
	padding: 50px 0 100px;
	background: var(--light-pink-color);
}

.contact-section .section-content {
	display: flex;
	gap: 48px;
	align-items: flex-start;
	justify-content: space-between;
}

.contact-section .contact-info-list .contact-info {
	display: flex;
	gap: 20px;
	margin: 20px 0;
	align-items: center;
}

.contact-section .contact-info-list .contact-info i {
	font-size: var(--font-size-m);
}

.contact-section .contact-form {
	max-width: 50%;
}

.contact-section .contact-form .form-input {
	width: 100%;
	height: 50px;
	padding: 0 12px;
	outline: none;
	margin-bottom: 16px;
	background: var(--white-color);
	border-radius: var(--border-radius-s);
	border: 1px solid var(--medium-gray-color);
}

.contact-section .contact-form .form-input:focus {
	border-color: var(--secondary-color);
}

.contact-section .contact-form textarea.form-input {
	height: 100px;
	padding: 12px;
	resize: vertical;
}

.contact-section .contact-form .submit-button {
	padding: 10px 26px;
	margin-top: 10px;
	color: var(--white-color);
	font-size: var(--font-size-m);
	font-weight: var(--medium-gray-color);
	background: var(--primary-color);
	border-radius: var(--border-radius-m);
	border: 1px solid var(--primary-color);
	transition: 0.3s ease;
}

.contact-section .contact-form .submit-button:hover {
	color: var(--primary-color);
	background: transparent;
}

/* Footer section styling */
.footer-section {
	padding: 20px 0;
	background: var(--dark-color);
}

.footer-section .section-content {
	display: flex;
	align-items: center;
	justify-content: space-between;
}
/* ... */

